What I am happy with
This is what I'm happy with. It's simple, and I feel that it's who I am.
Over time, I will more then likely make changes to it as I learn more
about design and what I think would be a good presentation of what I
know how to do and what I think is suitable, but this is me right now.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>AJ Carothers</title>
 	
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/grid.css">				
+  <link rel="stylesheet" href="css/grid.css">
+  <link href='http://fonts.googleapis.com/css?family=Averia+Sans+Libre:400,700' rel='stylesheet' type='text/css'>				
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
@@ -14,7 +15,16 @@
 	<div class="container showgrid">
 		
 		<!-- Your Content -->
-		<h1>Your Website</h1>
+		<article class="grid_12"><img src="https://scontent-b-sea.xx.fbcdn.net/hphotos-frc1/t1/229155_218771298135729_3182903_n.jpg" alt="" class="grid_3">
+		<h1 class="grid_8">AJ L. Carothers' personal website</h1></article>
+		<h3>About me</h3>
+		<p>Hi, my name is AJ Carothers. I am a Freshman at Eastern Washington University, currently majoring in mechanical engineering however I am highly considering switching to computer programming. I live in Spokane Valley, WA, and attend EWU full time. I have lived in Spokane Valley for 3 years, Sierra Vista Arizona for 9, and Nine Mile Falls for 10 years. My goals consist of, in order, deciding firmly on a major for college, graduating with a Master's in that major as a minimum, and finding a career in my future major.</p>
+		<h3>Links to things of note</h3>
+		<ul>
+			<li><a href="http://ajshub.github.io/p1-bio">My bio</a></li>
+			<li><a href="http://ajshub.github.io/p2-resume">My Resume</a></li>
+			<li><a href="http://ajshub.github.io/p3-style-tile">Style Tile for my work</a></li>
+		</ul>
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
